--- a/fake.tex
+++ b/fake.tex
@@ -331,5 +331,11 @@ The 10 words whose absence most strongly predicts that the news is real are: \te
 The 10 words whose presence most strongly predicts that the news is fake are: \textit{trump, to, the, donald, for, in, of, and, a,} and \textit{on}.\\
 
 The 10 words whose absence most strongly predicts that the news is fake are: \textit{avocado, grattan, date, jennett, backwards, jordan, vow, personnel, industrials,} and \textit{denuclearisation}.\\\\
-\textit{b)} test
+\textit{b)} \textit{It is assumed that this question is asking for the words whose presence most affects the probability}\\
+The 10 non-stopwords whose presence most strongly predicts that the news is real are: \textit{trump, donald, trumps, says, north, korea, election, clinton, ban,} and \textit{president}.\\
+The 10 non-stopwords whose presence most strongly predicts that the news is fake are: \textit{trump, donald, hillary, clinton, election, just, president, new, america,} and \textit{obama}.\\
+
+The explanation of why prevalence leads to increased probability is the same as what was described in part a).
+
+\textit{c)} It may make sense to remove stopwords since 
 \end{document}
