fixed some typos in latex

--- a/fake.tex
+++ b/fake.tex
@@ -1,4 +1,7 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 
+% Author: Izaak Niksan - 1002659777
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Programming/Coding Assignment
 % LaTeX Template
 %
@@ -18,9 +21,9 @@
 % CONFIGURATION" section.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+% 
 %----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%   PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
 \documentclass{article}
@@ -59,109 +62,39 @@
 
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
 
-%%%%% HUSHAMS SETTINGS %%%%%
+%----------------------------------------------------------------------------------------
+%   CODE INCLUSION CONFIGURATION
+%----------------------------------------------------------------------------------------
 
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{graphicx}
-\usepackage{xcolor}
-\usepackage{indentfirst}
-\usepackage{listings}
-
-\usepackage[tx]{sfmath}
-\renewcommand\familydefault{\sfdefault}
-\usepackage{tgheros}
-
-\usepackage{amsmath,amssymb,amsthm,textcomp}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{tikz}
-
-\usepackage{geometry}
-\geometry{total={210mm,297mm},
-left=25mm,right=25mm,%
-bindingoffset=0mm, top=20mm,bottom=20mm}
-
-\usepackage{color}
- 
-\definecolor{codegreen}{rgb}{0,0.6,0}
-\definecolor{codegray}{rgb}{0.5,0.5,0.5}
-\definecolor{codepurple}{rgb}{0.58,0,0.82}
-\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
- 
-\lstdefinestyle{mystyle}{
-    backgroundcolor=\color{backcolour},   
-    commentstyle=\color{codegreen},
-    keywordstyle=\color{magenta},
-    numberstyle=\tiny\color{codegray},
-    stringstyle=\color{codepurple},
-    basicstyle=\footnotesize,
-    breakatwhitespace=false,         
-    breaklines=true,                 
-    captionpos=b,                    
-    keepspaces=true,                 
-    numbers=left,                    
-    numbersep=5pt,                  
-    showspaces=false,                
-    showstringspaces=false,
-    showtabs=false,                  
-    tabsize=2
+\definecolor{MyDarkGreen}{rgb}{0.0,0.4,0.0} % This is the color used for comments
+\lstloadlanguages{Perl} % Load Perl syntax for listings, for a list of other languages supported see: ftp://ftp.tex.ac.uk/tex-archive/macros/latex/contrib/listings/listings.pdf
+\lstset{language=Perl, % Use Perl in this example
+        frame=single, % Single frame around code
+        basicstyle=\small\ttfamily, % Use small true type font
+        keywordstyle=[1]\color{Blue}\bf, % Perl functions bold and blue
+        keywordstyle=[2]\color{Purple}, % Perl function arguments purple
+        keywordstyle=[3]\color{Blue}\underbar, % Custom functions underlined and blue
+        identifierstyle=, % Nothing special about identifiers                                         
+        commentstyle=\usefont{T1}{pcr}{m}{sl}\color{MyDarkGreen}\small, % Comments small dark green courier font
+        stringstyle=\color{Purple}, % Strings are purple
+        showstringspaces=false, % Don't put marks in string spaces
+        tabsize=5, % 5 spaces per tab
+        %
+        % Put standard Perl functions not included in the default language here
+        morekeywords={rand},
+        %
+        % Put Perl function parameters here
+        morekeywords=[2]{on, off, interp},
+        %
+        % Put user defined functions here
+        morekeywords=[3]{test},
+        %
+        morecomment=[l][\color{Blue}]{...}, % Line continuation (...) like blue comment
+        numbers=left, % Line numbers on left
+        firstnumber=1, % Line numbers start with line 1
+        numberstyle=\tiny\color{Blue}, % Line numbers are blue and small
+        stepnumber=5 % Line numbers go in steps of 5
 }
- 
-\lstset{style=mystyle}
-
-\linespread{1.3}
-
-\newcommand{\linia}{\rule{\linewidth}{0.5pt}}
-
-% custom theorems if needed
-\newtheoremstyle{mytheor}
-    {1ex}{1ex}{\normalfont}{0pt}{\scshape}{.}{1ex}
-    {{\thmname{#1 }}{\thmnumber{#2}}{\thmnote{ (#3)}}}
-
-\theoremstyle{mytheor}
-\theoremstyle{definition}
-\newtheorem{defi}{Definition}
-\newtheorem*{lemma}{Lemma}
-\newtheorem*{prf}{Proof}
-
-% my own titles
-\makeatletter
-\renewcommand{\maketitle}{
-\begin{center}
-\vspace{2ex}
-{\huge \textsc{\@title}}
-\vspace{1ex}
-\\
-\linia\\
-\@author \hfill \@date
-\vspace{4ex}
-\end{center}
-}
-\makeatother
-%%%
-
-% custom footers and headers
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\lhead{}
-\chead{}
-\rhead{}
-\lfoot{Assignment \textnumero{} 2}
-\cfoot{}
-\rfoot{Page \thepage}
-\renewcommand{\headrulewidth}{0pt}
-\renewcommand{\footrulewidth}{0pt}
-%
-
-% all section titles centered and bolded
-\usepackage{sectsty}
-\allsectionsfont{\bfseries\large}
-%
-% add section label
-\renewcommand\thesection{Part~\arabic{section}:}
-%
-%%%%%%%%
 
 % Creates a new command to include a perl script, the first parameter is the filename of the script (without .pl), the second parameter is the caption
 \newcommand{\perlscript}[2]{
@@ -171,8 +104,8 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 }
 
 %----------------------------------------------------------------------------------------
-%	DOCUMENT STRUCTURE COMMANDS
-%	Skip this unless you know what you're doing
+%   DOCUMENT STRUCTURE COMMANDS
+%   Skip this unless you know what you're doing
 %----------------------------------------------------------------------------------------
 
 % Header and footer for when a page split occurs within a problem environment
@@ -215,17 +148,17 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 }
 
 %----------------------------------------------------------------------------------------
-%	NAME AND CLASS SECTION
+%   NAME AND CLASS SECTION
 %----------------------------------------------------------------------------------------
 
-\newcommand{\hmwkTitle}{Project\ \#3} % Assignment title
+\newcommand{\hmwkTitle}{Project\ \#1} % Assignment title
 \newcommand{\hmwkDueDate}{Monday,\ March\ 19,\ 2018} % Due date
 \newcommand{\hmwkClass}{CSC411} % Course/class
 \newcommand{\hmwkClassTime}{Thursday 6-9 pm} % Class/lecture time
-\newcommand{\hmwkAuthorName}{Izaak Niksan and Husham Hassan} % Your name
+\newcommand{\hmwkAuthorName}{Izaak Niksan} % Your name
 
 %----------------------------------------------------------------------------------------
-%	TITLE PAGE
+%   TITLE PAGE
 %----------------------------------------------------------------------------------------
 
 \title{
@@ -241,14 +174,16 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 
 %----------------------------------------------------------------------------------------
 
-\begin{document} \maketitle \clearpage
+\begin{document}
 
+\maketitle
+\clearpage
 \textbf{Part 1)}\\
 Upon first glance, one striking difference between the datasets is that the real articles appear to have significantly longer headlines on average. In terms of words that seem to appear more frequently in a specific dataset, the words \textit{hillary}, \textit{russia}, and \textit{victory} immediately stick out. The word \textit{hillary} appears 150 times in fake articles but only 24 times in real articles. The word \textit{russia} appears 45 times in fake articles and 77 times in real articles. The word \textit{victory} appears 48 times in fake articles and 25 times in real articles.\\\\
 \textbf{Part 2)}\\
 First, the data was separated into different sets by running the \textit{splitting\_datasets.py} script. This script parses the provided fake and real headlines and dumps various dictionaries into pickle files for easy access in future parts. The training set comprises 70\% of the headlines, the validation set 15\%, and the test set 15\%. These dictionaries contain words as keys, and the number of times each word appears as values.\\
 
-In \textit{part2.py}, the Naive Bayes classifier was implemented. The code for the function is seen below. As noted in the project handout, it is undesirable to multiply many small floating point values together since approximations in their digital representations eventually lead to very inaccurate results. Instead, when implementing the classifier, a sum of logs was used instead. More specifically, when evaluating $$P(C|headline)=\frac{P(headline|C)P(C)}{P(headline)}=\frac{P(headline)\Pi_{i}P(word_i|C)}{P(headline)},$$ instead of explicitly computing the term on the right, since the end goal was to determine which of $P(fake|headline)$ or $P(real|headline)$ was larger, it was sufficient to maximize the term on the right. Thus, since exponential functions are strictly increasing or decreasing and the term in the denominator is a constant, the term on the right was replaced with 
+In \textit{part2.py}, the Naive Bayes classifier was implemented. The code for the function is seen below. As noted in the project handout, it is undesirable to multiply many small floating point values together since approximations in their digital representations eventually lead to very inaccurate results. Instead, when implementing the classifier, a sum of logs was used instead. More specifically, when evaluating $$P(C|headline)=\frac{P(headline|C)P(C)}{P(headline)}=\frac{P(C)\Pi_{i}P(word_i|C)}{P(headline)},$$ instead of explicitly computing the term on the right, since the end goal was to determine which of $P(fake|headline)$ or $P(real|headline)$ was larger, it was sufficient to maximize the term on the right. Thus, since exponential functions are strictly increasing or decreasing and the term in the denominator is a constant, the term on the right was replaced with 
 $log(P(headline))+\sum_{i}log(P(word_i|C))$.\\
 
 One additional note is that, as described in the the lecture slides, "virtual examples" were added to the training set to avoid the case where the count of a word is 0. This was done by including two hyperparameters: $m$ and $p\_hat$. Using these, $P(word_i|C)$ was computed as follows:
@@ -331,11 +266,54 @@ The 10 words whose absence most strongly predicts that the news is real are: \te
 The 10 words whose presence most strongly predicts that the news is fake are: \textit{trump, to, the, donald, for, in, of, and, a,} and \textit{on}.\\
 
 The 10 words whose absence most strongly predicts that the news is fake are: \textit{avocado, grattan, date, jennett, backwards, jordan, vow, personnel, industrials,} and \textit{denuclearisation}.\\\\
-\textit{b)} \textit{It is assumed that this question is asking for the words whose presence most affects the probability}\\
+\textit{b)} \textit{*It is assumed that this question is asking for the words whose presence most affects the probability*}\\
 The 10 non-stopwords whose presence most strongly predicts that the news is real are: \textit{trump, donald, trumps, says, north, korea, election, clinton, ban,} and \textit{president}.\\
 The 10 non-stopwords whose presence most strongly predicts that the news is fake are: \textit{trump, donald, hillary, clinton, election, just, president, new, america,} and \textit{obama}.\\
 
-The explanation of why prevalence leads to increased probability is the same as what was described in part a).
+The explanation of why prevalence leads to increased probability is the same as what was described in part a).\\
 
-\textit{c)} It may make sense to remove stopwords since 
+\textit{c)} It usually makes sense to remove stopwords as they generally do not provide any meaningful information to the classifier since they are typically not relevant to the classification problem. In fact, having lots of stopwords in the datasets may actually confuse the classifier. However, in the rare case where one determines that the stopwords are actually relevant to the problem, then it may be useful to keep them in the datasets. One such example may be in the classification of spam emails; if it turns out to be the case that spam emails use many stopwords, since these emails generally do not have much meaningful content, then not removing them may be a wise decision.\newpage
+
+\textbf{Part 4)}\\
+In order to formulate this as a logistic regression classification problem, first the input vector $v\,\epsilon\, n\,x\,m$ (for $m$ headlines and $n$ inputs) was set up such that $v[k][z]=1$ when word $k$ appeared in headline $z$, else the value was 0.\\
+
+As before, the headlines were cleaned up such that they became arrays of words, with spaces and newline characters removed. Some code from project 2 was reused. The inputs consisted off the words in the \textit{training set} only, since words which the classifier has never seen before cannot be used in any meaningful way. The output of the classifier is $y\,\epsilon\, 2\,x\,m$, such that $y[0][k]=1$ and $y[1][k]=0$ for a real headline, and the reverse for a fake one. In other words, it employs one-hot encoding. When an input is fed into the classifier, the index whose value is closest to 1 is taken as the classifier's guess.\\
+
+For the gradient descent, alpha was 0.001, lambda was 0.8, and MAX\_ITERS was 10 000. As recommended on piazza, L2 regularization was used. It is noted that the value of lambda did not seem to significantly affect the performance. In order to tune lambda, the validation set was used. The lambda which led to the best classifier was chosen to be the optimal one. The optimizer started at lambda=0.1, ended at lambda=10, and increased by iterations of 0.1. Figure 1 displays the performance on the training and validation sets for lambda=10. Furthermore, the optimal alpha was higher than it was in the previous project.\\
+
+Finally, as seen in Figure 2, the performance on the validation set seemed to peak at 75\%. This value seemed unexpectedly low, although regardless of the parameters of the algorithm the performance could never increase past this mark.
+\begin{center}
+\includegraphics[width=13cm, height=8cm]{latex_images/part4_lambda10.png} 
+\captionof{figure}{Learning Curves for a Logistic Regression Classifier on Training and Validation Sets. alpha=0.01, lambda=10}
+\includegraphics[width=13cm, height=8cm]{latex_images/part4_learningcurve_withval.png} 
+\captionof{figure}{Learning Curves for a Logistic Regression Classifier on Training and Validation Sets. alpha=0.01, lambda=0.8}
+\end{center}
+\\
+\textbf{Part 5)}\\
+\textit{Logistic Regression:}\\
+For logistic regression, the generalized multicase probability of the input being of class $i$ is 
+$$p_i=\frac{exp(w_0^{(i)}+w_1^{(i)}x_1+...+w_k^{(i)}x_k)}{\sum_jexp(w_0^{(j)}+w_1^{(j)}x_1+...+w_k^{(j)}x_k)}>0.5$$
+For the case of binary classification the expression can be written as
+$$p_1=\frac{exp(o_1)}{exp(o_1)+exp(o_2)}=\frac{1}{1+exp(o_2-o_1)}>0.5,$$
+where $o_i\equiv w_0^{(i)}+w_1^{(i)}x_1+...+w_k^{(i)}x_k$, and $p_1$ denotes the probability of the input being of class 1. Note that $p_1=1-p_2$. \\
+
+Thus, rearranging, we require the following inequality to hold when deciding to classify as $y=1$:
+
+$$1+exp(o_2-o_1)<2$$
+$$exp(o_2-o_1)<1$$
+Taking the natural log of both sides:
+$$o_2-o_1=(w_0^{(2)}+w_1^{(2)}x_1+...+w_k^{(2)}x_k)-(w_0^{(1)}+w_1^{(1)}x_1+...+w_k^{(1)}x_k)<0$$
+Grouping terms:
+$$(w_0^{(2)}-w_0^{(1)})+(w_1^{(2)}-w_1^{(1)})x_1+...+(w_k^{(2)}-w_k^{(1)})x_k<0$$
+Multiplying each side by -1:
+$$(w_0^{(1)}-w_0^{(2)})+(w_1^{(1)}-w_1^{(2)})x_1+...+(w_k^{(1)}-w_k^{(2)})x_k=\theta_0+\theta_1I_1(x)+...+\theta_k I_k(x)>0$$
+By observation, it is deduced that $\theta_j=(w_j^{(1)}-w_j^{(2)})$ and $I_j(x)=x_j$. This inequality must hold for classification as $y=1$, and must not hold for classification as $y=0$.\\
+
+\textit{Naive Bayes:}\\
+
+
+
+
+
+%----------------------------------------------------------------------------------------
 \end{document}
