part 6 computed the arrays wrong. fixed.

--- a/fake.tex
+++ b/fake.tex
@@ -336,7 +336,32 @@ By observation, it is deduced that $\theta_j=(w_j^{(1)}-w_j^{(2)})$ and $I_j(x)=
 
 
 \\\\
-\textbf{Part 6)}\\
+\textbf{Part 6)}
+\textit{It is assumed that $\theta$ in the context of this question refers to the same $\theta$ that was derived in part 5.\\\\a)} It is noted that $\theta$ was defined based on classifying an input as real news. The top 10 largest values of $\theta$ are:\\\\
+2.21237425, 1.89837329, 1.62553059, 1.42992295, 1.39639204, 1.38342583, 1.30766623, 1.2977954,  1.27815396, 1.22090128\\
 
+These correspond to the following words:\\\\
+'trumps', 'korea', 'north', 'turnbull', 'trade', 'ban', 'east', 'travel', 'tax', 'australia'\\
+
+The top 10 most negative values of $\theta$ are:\\\\
+-2.49557114, -1.65760892, -1.56222629, -1.53497249, -1.49412982, -1.46469659, -1.45115002, -1.43763763, -1.41043447, -1.40070633\\
+
+These correspond to the following words:\\\\
+'hillary', 'u', 'voting', 'if', 'just', 'is', 'kill', 'wins', '4', 'star'\\
+
+Referencing part 3(a), it is seen that 'pedo' appears both in the list corresponding to the most negeative values as well as the list of words whose absence most strongly predicts real news.
+
+\textit{b)}
+The top 10 largest values of $\theta$ are:\\\\
+2.21237425, 1.89837329, 1.62553059, 1.42992295, 1.39639204, 1.38342583, 1.30766623, 1.2977954,  1.27815396, 1.22090128\\
+ 
+ These correspond to the following words:\\\\
+ 'trumps', 'korea', 'north', 'turnbull', 'trade', 'ban', 'east', 'travel', 'tax', 'australia'
+ 
+ The top 10 most negative values of $\theta$ are:\\\\
+ -2.49557114, -1.65760892, -1.56222629, -1.49412982, -1.45115002, -1.43763763, -1.41043447, -1.40070633, -1.38123331, -1.31561228\\
+ 
+ These correspond to the following words:\\\\
+ 'hillary', 'u', 'voting', 'just', 'kill', 'wins', '4', 'star', 'voter', 'fame'
 %----------------------------------------------------------------------------------------
 \end{document}
