--- a/fake.tex
+++ b/fake.tex
@@ -349,7 +349,7 @@ The top 10 most negative values of $\theta$ are:\\\\
 -2.49557114, -1.65760892, -1.56222629, -1.53497249, -1.49412982, -1.46469659, -1.45115002, -1.43763763, -1.41043447, -1.40070633\\
 
 These correspond to the following words:\\\\
-'hillary', 'u', 'voting', 'if', 'just', 'is', 'kill', 'wins', '4', 'star'\\
+'hillary', 'u', 'voting', 'if', 'just', 'is', 'kill', 'wins', '4', 'voter'\\
 
 The first list of words, corresponding to large values of $\theta$, has the word 'trumps' in common with the list of words which most strongly predicts real news. However, the rest of the words are unique. It is noted that many words in the lists in part 3 (a) are stopwords; the lists in this part on the other hand contain very few.
 
@@ -368,5 +368,9 @@ In this part, stopwords have been removed. The top 10 largest values of $\theta$
  'hillary', 'u', 'voting', 'just', 'kill', 'wins', '4', 'star', 'voter', 'fame'
  
 After stopwords were removed, the list for large values of $\theta$ shared 'trumps', 'korea', 'north', and 'ban' with the list of words which most strongly predicted real news. The list of large negative values of $\theta$ shared 'hillary' and 'just' with the list of words which most strongly predicted fake news.
+
+
+\textit{c)} \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\\\\\\\\\\\\\\For this project, the magnitude of all weights for the final logistic regression classifier were less than 1. This means that \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+\textbf{Part 7)}
 %----------------------------------------------------------------------------------------
 \end{document}
