--- a/fake.tex
+++ b/fake.tex
@@ -379,5 +379,9 @@ To show the relationship between $max\_depth$ and the performance, the value of 
 \includegraphics[width=13cm, height=8cm]{latex_images/part7_max_depths_const_numfeat.png} 
 \captionof{figure}{Percent Classification for varying max\_depth sizes for max\_features=0.6}
 \end{center}
+\textit{b)} \\
+\includegraphics[width=16cm, height=8cm]{latex_images/part7_b.PNG} 
+\captionof{figure}{}
+
 %----------------------------------------------------------------------------------------
 \end{document}
